--- a/src/style/citySimpleData.css
+++ b/src/style/citySimpleData.css
@@ -1,6 +1,7 @@
 .simple_city_data {
     display:flex;
-    border-bottom: 1px solid lightgray
+    border-bottom: 1px solid lightgray;
+    height:10%;
 
 }
 
